--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#192637</color>
+    <color name="colorPrimaryDark">#0C1620</color>
+    <color name="colorAccent">#2DC7AF</color>
+    <color name="transparent">@android:color/transparent</color>
+
+
+
+    <color name="layoutBackgroundColor1">#FFFFFF</color>
+    <color name="layoutBackgroundColor2">#F3F3F3</color>
+    <color name="layoutBackgroundColor3">#747474</color>
+
+
+
+
+    <color name="textViewColor1">@android:color/black</color>
+    <color name="textViewColor2">@android:color/white</color>
+    <color name="textViewColor3">#747474</color>
+    <color name="textViewColor4">#2DC7AF</color>
 </resources>
